Fix form z-index - the form was being over-lapped by the Add button (z-index = 1 to show up over book divs) - fix: now it has z-index 2 to display over everything else

--- a/src/style_modern.scss
+++ b/src/style_modern.scss
@@ -180,6 +180,7 @@ form {
     left: 0;
     height: 100%;
     width: 100%;
+    z-index: 2;
 
     #form-content {
         position: absolute;
